--- a/E2E Testing Demo/E2E Testing Demo.csproj
+++ b/E2E Testing Demo/E2E Testing Demo.csproj
@@ -213,8 +213,6 @@
     <Content Include="Test\CasperJSBin\batchbin\phantomcss.js" />
     <Content Include="Test\CasperJSBin\batchbin\resemble.js" />
     <Content Include="Test\CasperJSBin\batchbin\resemblejscontainer.html" />
-    <Content Include="Test\CasperJSBin\batchbin\screenshots\page container_0.png" />
-    <Content Include="Test\CasperJSBin\batchbin\screenshots\page header_1.png" />
     <Content Include="Test\CasperJSBin\bin\usage.txt" />
     <Content Include="Test\CasperJSBin\batchbin\bootstrap.js" />
     <Content Include="Test\CasperJSBin\modules\casper.js" />
@@ -424,6 +422,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Test\CasperJSBin\batchbin\results\" />
+    <Folder Include="Test\CasperJSBin\batchbin\screenshots\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
