--- a/E2E Testing Demo/E2E Testing Demo.csproj
+++ b/E2E Testing Demo/E2E Testing Demo.csproj
@@ -357,8 +357,8 @@
     <Content Include="Test\CasperJSBin\tests\testdir\03_b.js" />
     <Content Include="Test\CasperJSBin\tests\testdir\04\01_init.js" />
     <Content Include="Test\CasperJSBin\tests\testdir\04\02_do.js" />
-    <Content Include="Test\CasperJS\phantomcsstest.js" />
-    <Content Include="Test\CasperJS\casperjstests.js" />
+    <Content Include="Test\CSS\homepage.js" />
+    <Content Include="Test\E2E\localhost.js" />
     <Content Include="Test\PhantomCSS\libs\casperjs\bin\bootstrap.js" />
     <Content Include="Test\PhantomCSS\libs\casperjs\modules\casper.js" />
     <Content Include="Test\PhantomCSS\libs\casperjs\modules\cli.js" />
